--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
   web:
     image: node:lts
     user: 'node'
-    working_dir: /pixelArt
+    working_dir: /ProjectSourceCode
     env_file: .env
     environment:
       - NODE_ENV=development
@@ -19,7 +19,7 @@ services:
     ports:
       - '3000:3000'
     volumes:
-      - ./:/repository
+      - ./:/ProjectSourceCode
     command: 'npm start'
 volumes:
   group-project:
