--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -1,8 +1,8 @@
 {
     "name": "web-services",
-    "main": "index.js",
+    "main": "src/index.js",
     "dependencies": {
-        "socket.io":"^4.8.1",
+        "socket.io": "^4.8.1",
         "bcryptjs": "^2.4.0",
         "body-parser": "1.20.0",
         "express-handlebars": "^7.1.2",
@@ -14,5 +14,11 @@
     "scripts": {
         "prestart": "npm install",
         "start": "nodemon index.js"
-    }
+    },
+    "version": "1.0.0",
+    "devDependencies": {},
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": ""
 }
