--- a/ProjectSourceCode/src/package.json
+++ b/ProjectSourceCode/src/package.json
@@ -1,6 +1,13 @@
 {
-    "name": "socket-chat-example",
-    "version": "0.0.1",
-    "description": "my first socket.io app",
-    "dependencies": {}
+    "name": "color_picker",
+    "main": "index.js",
+    "dependencies": {
+        "body-parser": "1.20.0",
+        "express": "^4.6.1",
+        "nodemon": "2.0.20"
+    },
+    "scripts": {
+        "prestart": "npm install",
+        "start": "nodemon index.js"
+    }
 }
