--- a/ProjectSourceCode/src/package.json
+++ b/ProjectSourceCode/src/package.json
@@ -3,6 +3,7 @@
     "main": "index.js",
     "dependencies": {
         "body-parser": "1.20.0",
+        "express-handlebars": "^7.1.2",
         "express": "^4.6.1",
         "nodemon": "2.0.20"
     },
