--- a/ProjectSourceCode/.env
+++ b/ProjectSourceCode/.env
@@ -1,7 +1,7 @@
 # database credentials
-POSTGRES_USER="postgres"
-POSTGRES_PASSWORD="pwd"
-POSTGRES_DB="users_db"
+POSTGRES_USER="posigres"
+POSTGRES_PASSWORD="pwh"
+POSTGRES_DB="user_db"
 
 # Node vars
-SESSION_SECRET="super duper secret!"
+SESSION_SECRET="super diper st!"
