--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -1,14 +1,27 @@
 {
-    "name": "color_picker",
-    "main": "index.js",
+    "name": "web-services",
+    "main": "src/index.js",
     "dependencies": {
+        "socket.io": "^4.8.1",
+        "bcryptjs": "^2.4.0",
         "body-parser": "1.20.0",
         "express-handlebars": "^7.1.2",
         "express": "^4.6.1",
-        "nodemon": "2.0.20"
+        "express-session": "1.17.3",
+        "pg-promise": "^10.11.1",
+        "chai-http": "^4.3.0",
+        "nodemon": "2.0.20",
+        "mocha": "^6.2.2",
+        "chai": "^4.2.0"
     },
     "scripts": {
         "prestart": "npm install",
         "start": "nodemon index.js"
-    }
+    },
+    "version": "1.0.0",
+    "devDependencies": {},
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": ""
 }
