--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -16,7 +16,9 @@
     },
     "scripts": {
         "prestart": "npm install",
-        "start": "nodemon index.js"
+        "start": "nodemon index.js",
+        "test": "mocha",
+        "testandrun": "npm run prestart && npm run test && npm start"
     },
     "version": "1.0.0",
     "devDependencies": {},
