--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -2,17 +2,17 @@
     "name": "web-services",
     "main": "src/index.js",
     "dependencies": {
-        "socket.io": "^4.8.1",
         "bcryptjs": "^2.4.0",
-        "body-parser": "1.20.0",
-        "express-handlebars": "^7.1.2",
-        "express": "^4.6.1",
-        "express-session": "1.17.3",
-        "pg-promise": "^10.11.1",
+        "body-parser": "^1.20.3",
+        "chai": "^4.2.0",
         "chai-http": "^4.3.0",
-        "nodemon": "2.0.20",
-        "mocha": "^6.2.2",
-        "chai": "^4.2.0"
+        "express": "^4.6.1",
+        "express-handlebars": "^7.1.2",
+        "express-session": "^1.18.1",
+        "mocha": "^11.1.0",
+        "nodemon": "^3.1.10",
+        "pg-promise": "^10.11.1",
+        "socket.io": "^4.8.1"
     },
     "scripts": {
         "prestart": "npm install",
@@ -21,7 +21,6 @@
         "testandrun": "npm run prestart && npm run test && npm start"
     },
     "version": "1.0.0",
-    "devDependencies": {},
     "keywords": [],
     "author": "",
     "license": "ISC",
