--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - ./src/init_data:/docker-entrypoint-initdb.d
   web:
     image: node:lts
+    restart: unless-stopped
     user: 'node'
     working_dir: /ProjectSourceCode
     env_file: .env
